--- a/mods/ts/rpgtest/items.yaml
+++ b/mods/ts/rpgtest/items.yaml
@@ -82,6 +82,29 @@ railgun_item:
 		Image: rumya
 	ItemMesh@test:
 		Mesh: w_rail
+	WithEquipmentAnimation:
+		TakeOutAnim: act_takeout
+		PutAwayAnim: act_putaway
+		TakeOutFrame: 30
+		AnimsReplace:
+			Stand: sniper_stand
+			Walk: sniper_walk
+			Guard: sniper_guard
+			GuardMove: sniper_guardmove
+			StandToGuard: sniper_s2g
+			GuardToStand: sniper_g2s
+			Prone: sniper_prone
+			Crawl: sniper_crawl
+			Attack: sniper_attack
+			ProneAttack: sniper_prone-attack
+			StandToProne: sniper_s2p
+			ProneToStand: sniper_p2s
+			DieStand: sniper_die-front
+			DieProne: sniper_die-prone
+		IdleActions: sniper_idle1
+		ActionFrameReplace:
+			AttackFrame: 3
+			ProneAttackFrame: 17
 
 type38_item:
 	WeaponItem:
@@ -96,3 +119,26 @@ type38_item:
 		Image: rumya
 	ItemMesh@test:
 		Mesh: w_type38
+	WithEquipmentAnimation:
+		TakeOutAnim: act_takeout
+		PutAwayAnim: act_putaway
+		TakeOutFrame: 30
+		AnimsReplace:
+			Stand: rifle_stand
+			Walk: sniper_walk
+			Guard: rifle_guard
+			GuardMove: rifle_guardmove
+			# StandToGuard: sniper_s2g
+			# GuardToStand: sniper_g2s
+			Prone: rifle_prone
+			Crawl: rifle_crawl
+			Attack: rifle_attack
+			ProneAttack: rifle_prone-attack
+			StandToProne: sniper_s2p
+			ProneToStand: sniper_p2s
+			DieStand: sniper_die-front
+			DieProne: sniper_die-prone
+		IdleActions: sniper_idle1
+		ActionFrameReplace:
+			AttackFrame: 0
+			ProneAttackFrame: 0
