--- a/mods/ts/3dtest/meshes.yaml
+++ b/mods/ts/3dtest/meshes.yaml
@@ -2,7 +2,7 @@ rumya:
 	Skeleton: Skeleton_CommonBody #testArmature
 		# if true, each actor update the adjust bone itself, 
 		# else they will use the same adjust bone pose which bake as bindpose
-		UseDynamicAdjBonePose: true #false
+		UseDynamicAdjBonePose: false
 		Bones:
 			s-Adj_Belly:
 				LastPoseScale: 2.7, 2.2, 3.9
@@ -33,27 +33,52 @@ rumya:
 
 			catidle: catidle_Skeleton_CommonBody
 
-			loop_stand: Stand_PF俯身站立.ska
-			loop_walk: Move_PF前进.ska
-			loop_guard: Guard_PF警戒.ska
-			loop_guardmove: Move_PFGuard举枪前进.ska
+			loop_stand: Stand_站立.ska
+			loop_walk: Move_Jog.ska #Move_CatWalk.ska
+			loop_guard: Guard_FighterIdle.ska
+			loop_guardmove: Move_Fighter_Forward.ska
 
-			s2g: StG_PF举起狙击枪.ska
-			g2s: GtS_PF放下狙击枪.ska
+			loop_prone: Prone_CatIdle.ska
+			loop_crawl: Crawl_爬.ska
 
-			loop_prone: Crawl_PF匍匐idle.ska
-			loop_crawl: Crawl_PF匍匐爬行.ska
+			act_attack: Guard_Boxing.ska
+			act_prone-attack: Guard_Boxing.ska
 
-			act_attack: Guard_PF狙击枪射击.ska
-			act_prone-attack: Crawl_PF狙击枪射击.ska
+			s2p: StP_StandToCatIdle.ska
+			p2s: PtS_CatIdleToStand.ska
 
-			s2p: StC_PF飞扑进入匍匐.ska
-			p2s: CtS_PF站起.ska
-
-			die_front: DIE_PF正面受击侧翻身死亡.ska
+			die_front: Die_FallOverFront.ska
 			die_prone: DIE_PF匍匐时受击死亡.ska
 
 			idle_1: Action_PF放下枪查看地图.ska
+
+			act_takeout: Action_TakeFromBack.ska
+			act_putaway: Action_PutBack.ska
+
+			sniper_stand: Stand_PF俯身站立.ska
+			sniper_walk: Move_PF前进.ska
+			sniper_guard: Guard_PF警戒.ska
+			sniper_guardmove: Move_PFGuard举枪前进.ska
+			sniper_s2g: StG_PF举起狙击枪.ska
+			sniper_g2s: GtS_PF放下狙击枪.ska
+			sniper_prone: Crawl_PF匍匐idle.ska
+			sniper_crawl: Crawl_PF匍匐爬行.ska
+			sniper_attack: Guard_PF狙击枪射击.ska
+			sniper_prone-attack: Crawl_PF狙击枪射击.ska
+			sniper_s2p: StC_PF飞扑进入匍匐.ska
+			sniper_p2s: CtS_PF站起.ska
+			sniper_die-front: DIE_PF正面受击侧翻身死亡.ska
+			sniper_die-prone: DIE_PF匍匐时受击死亡.ska
+			sniper_idle1: Action_PF放下枪查看地图.ska
+
+			rifle_stand: Stand_Rifle_Idle.ska
+			rifle_walk: Move_Rifle_Run.ska
+			rifle_guard: Guard_Rifle_Aim.ska
+			rifle_guardmove: Move_Rifle_Forward.ska
+			rifle_attack: Guard_RifleShoot.ska
+			rifle_prone: Prone_RifleIdle.ska
+			rifle_crawl: Crawl_Rifle.ska
+			rifle_prone-attack: Prone_RifleShoot.ska
 
 	Meshes:
 		face_addon: face_addon_DT_0
