--- a/mods/ts/weapons/otherweapons.yaml
+++ b/mods/ts/weapons/otherweapons.yaml
@@ -707,3 +707,22 @@ Consume:
 		Explosions: heal
 		ImpactSounds: gulp.wav
 		ValidTargets: Ground, Water, Air, Trees
+
+Fist:
+	Range: 1c0
+	ReloadDelay: 50
+	ValidTargets: Ground, Water
+	InvalidTargets: Wall, Building
+	Projectile: InstantHit
+		Inaccuracy: -1
+	Warhead@1Dam: TargetDamage
+		Damage: 2000
+		Spread: 0c20
+		Versus:
+			None: 100
+			Wood: 5
+			Light: 5
+			Heavy: 1
+			Concrete: 1
+		ValidTargets: Ground, Water, Air
+		DamageTypes: BulletDeath
