uarantee 1 riflemen on sell in mods
And engineer on RA and D2K construction yards

--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -547,11 +547,13 @@
 		UseDeathTypeSuffix: false
 	SpawnActorsOnSell@gdi:
 		ActorTypes: e1, e1, e2, medic, ctech
+		GuaranteedActorTypes: e1
 		MinHpPercent: 0
 		ValuePercent: 40
 		Factions: gdi
 	SpawnActorsOnSell@nod:
 		ActorTypes: e1, e1, e1, e3, e3, ctech
+		GuaranteedActorTypes: e1
 		MinHpPercent: 0
 		ValuePercent: 40
 		Factions: nod
