--- a/mods/ts/terrain/temperate/temperate-tileset.yaml
+++ b/mods/ts/terrain/temperate/temperate-tileset.yaml
@@ -1,23 +1,31 @@
-base: dirt
-	Scale: 4.5
-water01: Water01    	#0 water
-	Scale: 5
-cliff01: TileCliff1 	#1 cliff
-	Scale: 7
-conc01: TileConc1  		#2 road
-	Scale: 2.5
-grass01: TileGrass1 	#3 grass
-	Scale: 1.7
-sand01: TileSand1   	#4 sand
-	Scale: 3.8
-dirt02: TileDirt2   	#5 dirt road
-	Scale: 3
-rough01: TileGrass2  	#6 gravel
-	Scale: 6
-crack: crack        	#7 crack
-	Scale: 4.5
-clear: dirt        		#8 clear
-	Scale: 4.5
+TypeDefine:
+	base: 1
+		clear: dirt        		#8 clear
+			Scale: 4.5
+	# water: 1
+	# 	water01: Water01    	#0 water
+	# 		Scale: 5
+	cliff: 2
+		cliff01: TileCliff1 	#1 cliff
+			Scale: 7
+	conc: 3
+		conc01: TileConc1  		#2 road
+			Scale: 2.5
+	grass: 4
+		grass01: TileGrass1 	#3 grass
+			Scale: 1.7
+	sand: 5
+		sand01: TileSand1   	#4 sand
+			Scale: 3.8
+	dirt: 6
+		dirt02: TileDirt2   	#5 dirt road
+			Scale: 3
+	gravel: 7
+		rough01: TileGrass2  	#6 gravel
+			Scale: 6
+	crack: 8
+		crack: crack        	#7 crack
+			Scale: 4.5
 
 
 
