地形的specular支持

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -143,6 +143,8 @@
 		ProneCondition: takecover
 		DeathBodyRemain: 100
 		DeathFadeVec: 0,0,-3
+		MinIdleDelay: 100
+		MaxIdleDelay: 500
 		# KeepGuardStateWhenMoving: true
 	
 	WithSkeleton@tail:
