修复第一个TerrainBlock地形Mask渲染错误

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -186,6 +186,7 @@
 	Inherits@CRATESTATS: ^CrateStatModifiers
 	Inherits@selection: ^SelectableCombatUnit
 	Inherits@handicaps: ^PlayerHandicaps
+	AppearsOnRadar:
 	Huntable:
 	OwnerLostAction:
 		Action: Kill
