--- a/mods/ts/terrain/summer/summer-tileset.yaml
+++ b/mods/ts/terrain/summer/summer-tileset.yaml
@@ -2,15 +2,20 @@ TypeDefine:
 	base: 1
 		clear01: SummerClear01
 			Scale: 4
+			FlatSpecular: 0.3
 		clear02: SummerClear02
 			Scale: 4
+			FlatSpecular: 0.3
 		clear03: SummerClear03
 			Scale: 4
+			FlatSpecular: 0.3
 	cliff: 2
 		cliff01: SummerCliff01
 			Scale: 6
+			FlatSpecular: 0.4
 		cliff02: SummerCliff02
 			Scale: 6
+			FlatSpecular: 0.4
 	conc: 3
 		conc01: SummerConc01
 			Scale: 4
